--- a/page.css
+++ b/page.css
@@ -8,13 +8,24 @@ body{
     font-weight: 900;
     color: black;
     width: 100px;
-    height: 40px; 
-    border: 2px solid red;
+    height: 24px; 
+    outline: 5px solid #eaeaea;
 }
+.menu li:hover{
+    outline:none;
+}
+
 .menu li {
     display: inline;
-    
-
+    position: relative;
+    bottom: 79px;
+    float: right;
+    margin-left: 70px;
+    margin-right: 15px;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+    padding-left: 25px;
 }
 .menu li a {
     text-decoration: none;
@@ -136,5 +147,6 @@ tr:hover {background-color: #eaeaea;}
     margin-top: 50px;
     margin-left: 100px;
     outline: 5px solid #eaeaea;
+    
 }
 
