--- a/page.css
+++ b/page.css
@@ -9,7 +9,7 @@ body{
     color: black;
     width: 100px;
     height: 24px; 
-    outline: 5px solid #eaeaea;
+    outline: 3px solid #eaeaea;
 }
 .menu li:hover{
     outline:none;
@@ -136,13 +136,15 @@ tr:hover {background-color: #eaeaea;}
 }
 .content{
     background-color: #c9c4c4;
-    height: 800px;
+    height: 750px;
 }
 .footer{
     background-color: #c9c4c4;
     height: 80px;
-    text-align: center;
-    padding-top: 50px;
+    text-align: right;
+    padding-top: 5px;
+    padding-right: 15px;
+    margin: 0 auto;
 
 }
 .logo img {
@@ -151,7 +153,7 @@ tr:hover {background-color: #eaeaea;}
     margin: 0 auto;
     margin-top: 50px;
     margin-left: 100px;
-    outline: 5px solid #eaeaea;
+    outline: 3px solid #eaeaea;
     
 }
 .hh{
@@ -166,6 +168,11 @@ tr:hover {background-color: #eaeaea;}
     width: 270px; 
     height: 200px;
     outline: 3px solid #eaeaea;
-    float: right;
-    margin-right: 12px;
+    float: left;
+    padding-right: 3px;
+    margin-left: 6px
+}
+.table{
+    width: 990px;
+    margin-left: 5px;
 }
