--- a/page.css
+++ b/page.css
@@ -43,19 +43,18 @@ body{
 .menu li a:active{
     color: yellow;
 }
-h1,h3 {
+.cotent h1,h3{
     color:black;
     font-size: 30px;
     font-weight: 400;
     background-color:#eaeaea;
-    padding-left: 20px;
     
 }
 .des {
     color: #707070;
-    font-size: 14px; 
+    font-size: 20px; 
     font-style: italic;
-    line-height: 16px;
+    line-height: 20px;
 }
 .ddes{
     color:#484343;
@@ -63,6 +62,7 @@ h1,h3 {
     font-weight: 400;
     line-height: 24px;
     text-align: left;
+    margin-bottom: 0 ;
 }
 .list li {
     list-style-image: url(img/qtpass-icon-icon\ \(1\).png);
@@ -185,9 +185,70 @@ tr:hover {background-color: #eaeaea;}
     width: 990px;
     margin-left: 5px;
 }
+.t1content{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(200, 211, 211);
+    margin:  0 auto;
+}
+.t1content hr {
+    border: 2px dotted #eaeaea;
+    border-radius: 5px;
+    width: 100%;
+    margin: 0;
+}
+.t1content h1{
+    color: black;
+    font-size: 25px;
+    font-weight: 400;
+    background-color: #eaeaea;
+    padding-left: 20px;
+}
+.scrut {
+    width: 100%;
+}
+.scrut h3{
+    position: relative;
+    overflow: hidden;
+    
+}
 .scrut img{
     float: left;
-    padding-right: 3px;
-    margin-left: 6px
-    
+    padding-left: 10px;
+    padding-top: 2px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+}
+.des p {
+    float:right;
+    overflow: hidden;
+    margin: 0 auto;
+    padding-top: 10px;
+}
+.teh {
+    position: relative;
+    clear: both;
+    padding-left: 15px;
+}
+.button{
+    background-color: #c9c4c4;
+    border: none;
+    color: black;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px 20px;
+    cursor: pointer;
+    outline: 3px solid #eaeaea
+}
+.button:hover{
+    outline:none;
+}
+
+.button:active {
+  background-color: #eaeaea;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
