--- a/page.css
+++ b/page.css
@@ -110,6 +110,7 @@ input[type=email]:hover{
     text-transform: capitalize;
     font-size: 25px;
     font-style: italic;
+    
 }
 
 .table td,th{
@@ -251,4 +252,65 @@ tr:hover {background-color: #eaeaea;}
   background-color: #eaeaea;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+.catalogcont{
+    background-color: rgb(200, 211, 211);
+
+}
+.c1 {
+    display:inline-block;
+    margin-left: 150px;
+    margin-right: 100px;
+    margin-top: 15px;
+
+}
+.c1 img{
+    padding-left: 5px;
+}
+.c2{
+    float: left;
+    width: 300px;
+    height: 200px;
+    margin-top: 25px;
+    margin-left: 100px;
+
+}
+.c3{
+    float: right;
+    width: 300px;
+    height: 300px;
+    margin-top: 25px;
+    margin-right: 100px;
+    margin-bottom: 15px;
+    margin-left: 20px;
+
+}
+.catalogcont h1{
+    margin: 0 auto;
+    text-align: center;
+    font-size: 25px;
+}
+.catalogcont hr{
+    border: 2px dotted #eaeaea;
+    border-radius: 5px;
+    width: 100%;
+    margin: 0;
+}
+.c1 a, h3{
+    width: 220px;
+    font-size: 15px;
+    margin:  5px ;
+    text-align: center;
+
+}
+.text{
+    width: 240px;
+    height: 250px;
+    margin: 10px;
+}
+.c3 img{
+    margin-left: 15px;
+}
+.c2 img{
+    margin-left: 15px;
 }
