--- a/page.css
+++ b/page.css
@@ -314,3 +314,22 @@ tr:hover {background-color: #eaeaea;}
 .c2 img{
     margin-left: 15px;
 }
+iframe{
+    width: 100%;
+    height: 374px;
+}
+.contatepag{
+    background-color:rgb(200, 211, 211) ;
+}
+.hhr {
+    border: 2px dotted #eaeaea;
+    width: 100%;
+    margin: 10;
+}
+.contatepag h1{
+    color: black;
+    font-size: 25px;
+    font-weight: 400;
+    background-color: #eaeaea;
+    padding-left: 20px;
+}
